# cfmn

./: .dockerignore  .env.template  .gitignore  .production.env.template  CNAME  DEPLOYMENT.md  DEPLOY_CHECKLIST.md  Dockerfile  PRODUCTION_DIAGNOSIS.md  README.md  dev-shutdown.sh  dev-startup.sh  docker-compose.dev.yml  docker-compose.yml  docker-push.sh  index.html
backend/: Cargo.toml
backend/.sqlx/: query-02192d87ee958515fa4f08bc4b8f6ef69019a88c44e4a9c226cab1d706948f71.json  query-05b33b5f841562efe5eeb2e6b57bc56dc147bc95acb384884811705b51aded1c.json  query-106700f5546aed228c2de23c27ccf7b0f4c90c16acec46d550b554b52c906280.json  query-2640b8454bcc1c98012890f62e9ea6f8ab4b0f9a64d4d0e0148bd67cb1a64f43.json  query-283fb63c34bdf627775f5bc48dbd1c315dde53e8a3a8f96a7d286ca23937c14d.json  query-3846121c789ec2fb8997b867158f70eb31e14a925ce49a8d08f9c8175922e84b.json  query-430959f8c0437472115a82b2c3acbba2aca8a1b8afcadb7b08f57452b457bad5.json  query-59dcac83552135ee0919542ba4277f9fc1e5f409c0854e0070073631b99af2eb.json  query-778627d5a4e3ffeebe83412643ca5a5b2932525526a58778334283bd3efccf52.json  query-7b0389d38dfc559a58fe2e9a6daba8c0fd6a7549c95fddf79fa63107afda088b.json  query-96a96edd9203d76c3609e61c9c431672a1cfde56d528ca509cb9a3959de9c0ef.json  query-a52a088f49659fd7129d0cef2fd2b7f981f5641a15933072432cbd1d5069b84f.json  query-b036914acde32de0110b2620815cf15267969667507b0188eb810c615085fec6.json  query-b8bcdb22cdd1bbad81123033b9b688d5e16d272fc7c80f2ae44d15ef171195a1.json  query-b98be76e7fa2e98ef619c43e92cc1a13d8da72ad49e529b0447a181a79d2fbba.json  (+5 more)
backend/src/: env.rs  main.rs  (+1 more)
(+68 files in other folders)
