[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.4", features = ["multipart", "json", "macros"] }
tokio = { version = "1.47.1", features = ["full", "rt-multi-thread", "macros"] }
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
serde = { version = "1.0.219", features = ["derive"] }
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "postgres", "chrono", "uuid" ] }
tower-http = { version = "0.6.6", features = ["cors", "set-header", "fs", "limit"] }
uuid = { version = "1.18.0", features = ["v4", "serde"] }
axum-extra = { version = "0.10.1", features = ["multipart", "cookie", "cookie-private", "cookie-signed"] }
serde_json = "1.0.142"
jsonwebtoken = "9.3.0"
reqwest = { version = "0.12.8", default-features = false, features = ["rustls-tls", "json"] }
clap = { version = "4.5.4", features = ["derive", "env"] }
url = "2.5.4"
color-eyre = "0.6.5"
pdfium-render = { version = "0.8" }
image = "0.25"
tracing-appender = "0.2.3"